# modelpp

./: CMakeLists.txt  LICENSE  README.md  annotated.html  classes.html  classmodelpp_1_1model-members.html  classmodelpp_1_1model.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f10cedb89aae411f8cc82380c0a38922.html  fields_8hpp.html  fields_8hpp_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  menudata.js  metadata_8hpp.html  metadata_8hpp_source.html  model_8hpp.html  model_8hpp_source.html  modelpp_8hpp.html  modelpp_8hpp_source.html  namespacemembers.html  namespacemembers_type.html  namespacemembers_vars.html  namespacemodelpp.html  namespaces.html  structmodelpp_1_1fields-members.html  structmodelpp_1_1fields.html  structmodelpp_1_1fields_1_1member__ptr-members.html  structmodelpp_1_1fields_1_1member__ptr.html  structmodelpp_1_1member__ptr-members.html  structmodelpp_1_1member__ptr.html  structmodelpp_1_1member__type.html  structmodelpp_1_1member__type_3_01T_01U_1_1_5_01_4-members.html  (+3 more)
.github/workflows/: main.yml
CMakeModules/: CodeCoverage.cmake
doc/: CMakeLists.txt  Doxyfile.in
include/: modelpp.hpp
include/modelpp/: fields.hpp  inherited_metadata.hpp  inherited_model.hpp  metadata.hpp  model.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
test/: CMakeLists.txt  container_test.cpp  inherited_model_test.cpp  model_a.hpp  model_b.hpp  model_c.hpp  model_test.cpp  types.hpp
